#45776 - Fix catalog grid on IE

--- a/components/04-views/catalog/grid/_grid.scss
+++ b/components/04-views/catalog/grid/_grid.scss
@@ -15,4 +15,8 @@ $catalog-grid__border : 1px solid $gray-light !default;
     @include mq($screen-m) {
         grid-template-columns: 1fr 1fr 1fr;
     }
+
+    @include isIE() {
+        @include clearfix;
+    }
 }
